@startuml
interface IRVBankProperty {
    VersionEntry : IRVBankVersionEntry <<get>>
    Name : string <<get>> <<set>>
    Value : string <<get>> <<set>>
}
class RVBankProperty {
    + VersionEntry : IRVBankVersionEntry <<get>>
    - name : string
    + Name : string <<get>> <<set>>
    - value : string
    + Value : string <<get>> <<set>>
    + RVBankProperty(name:string, value:string, file:IRVBank, parent:IRVBankVersionEntry, logger:ILogger?)
    + RVBankProperty(reader:BisBinaryReader, options:RVBankOptions, file:IRVBank, parent:IRVBankVersionEntry, logger:ILogger?)
    + <<override>> Binarize(writer:BisBinaryWriter, options:RVBankOptions) : Result
    + <<sealed>> <<override>> Debinarize(reader:BisBinaryReader, options:RVBankOptions) : Result
    + <<override>> Validate(options:RVBankOptions) : Result
    + BisClone() : IRVBankProperty
}
IRVBankElement <|-- IRVBankProperty
"IBisCloneable`1" "<IRVBankProperty>" <|-- IRVBankProperty
RVBankElement <|-- RVBankProperty
IRVBankProperty <|-- RVBankProperty
@enduml
